refactor: rename symbols in module manager and reflection util.